# polyscope

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  cache.py  database.py  main.py  polymarket_signing.py  polymarket_trading.py  scheduler.py
bot/: Dockerfile  main.py
deploy/: deploy-phase-c.sh  nginx.conf
deploy/nginx/: INSTALL.md  geoblock.conf
scripts/: force-rebuild-accuracy.py  inspect-deploy.py  rotate-and-write-env.py  tg_smoke.py
src/polyscope/: backtest.py  calibration.py  divergence.py  models.py  movers.py  polymarket.py  stats.py
tests/: test_api.py  test_backtest.py  test_bot.py  test_builder_trades.py  test_calibration.py  test_db_accuracy.py  test_divergence.py  test_movers.py  test_outcomes.py  test_polymarket_signing.py  test_polymarket_trading.py  test_stats.py
web/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: acc-bar.tsx  connect-wallet.tsx  decision-card.tsx  disclaimer.tsx  divergence-bar.tsx  follow-button.tsx  hero-signature.tsx  last-updated.tsx  live-ticker.tsx  log-trade.tsx  logo.tsx  mobile-nav.tsx  page-header.tsx  page-view-tracker.tsx  polymarket-logo.tsx  score-badge.tsx  search-bar.tsx  share-button.tsx  signal-evidence.tsx  signal-track-record.tsx  size-hint.tsx  skeleton.tsx  stat-card.tsx  telegram-connect.tsx  theme-toggle.tsx  trade-button.tsx  trade-modal.tsx  view-toggle.tsx  watchlist-button.tsx  whale-flow.tsx
web/lib/: api.ts  (+8 more)
(+21 files in other folders)
